Route homepage and search, fix navigation links and alignment

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,6 +10,19 @@ body, html, #root{
 
 }
 
+h1 { font-size: 3em; }
+h2 { font-size: 2.5em; }
+h3 { font-size: 2.17em; }
+h4 { font-size: 2.12em; }
+h5 { font-size: 1.83em; }
+h6 { font-size: 1.75em; }
+
+h1, h2 { text-transform: uppercase; letter-spacing: 1.4px;} 
+
+h1, h2, h3, h4, h5, h6 {  }
+
+p { font-size: 1em; }
+
 .input{
 	  border-radius: 0px;
 }
